--- a/t/Makefile.am
+++ b/t/Makefile.am
@@ -4,7 +4,7 @@
 
 AUTOMAKE_OPTIONS = 1.3 no-dependencies
 
-#all:	tests
+all:	tests
 
 TEST_VERBOSE=0
 TEST_TYPE=test_$(LINKTYPE)
@@ -16,6 +16,6 @@ TESTDB_SW = -d
 EXTRA_DIST = *.t
 
 tests:
-	$(PERL) "-MExtUtils::Command::MM" "-e" "test_harness($(TEST_VERBOSE))" $(TEST_FILES)
+	PATH=../plugins-scripts:$(PATH) $(PERL) "-MExtUtils::Command::MM" "-e" "test_harness($(TEST_VERBOSE))" $(TEST_FILES)
 #	PERL_DL_NONLAZY=1 $(FULLPERLRUN) "-MExtUtils::Command::MM" "-e" "test_harness($(TEST_VERBOSE), '$(INST_LIB)', '$(INST_ARCHLIB)')" $(TEST_FILES)
 
