--- a/plugins-scripts/Makefile.am
+++ b/plugins-scripts/Makefile.am
@@ -11,6 +11,7 @@ GL_MODULES=\
   ../GLPlugin/lib/Monitoring/GLPlugin/DB/Item.pm \
   ../GLPlugin/lib/Monitoring/GLPlugin/DB/TableItem.pm
 EXTRA_MODULES=\
+  Classes/Mysql/Component/InstanceSubsystem.pm \
   Classes/Mysql/Component/TableSubsystem.pm \
   Classes/Mysql/Component/MyIsamSubsystem.pm \
   Classes/Mysql/Component/InnoDBSubsystem.pm \
